--- a/assets/sass/base/_configuration.scss
+++ b/assets/sass/base/_configuration.scss
@@ -13,6 +13,12 @@ $screen-sizes: (
   'l': 90em,
 );
 
+$wraps: (
+  's': 60em,
+  'm': 80em,
+  'l': 90em,
+);
+
 $spacings: (
   'none': 0,
   'xs': 0.25em,
