--- a/assets/sass/base/_configuration.scss
+++ b/assets/sass/base/_configuration.scss
@@ -1,4 +1,4 @@
-// # variables
+// # configuration
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -85,4 +85,12 @@ $notification-colors: (
   'light-green': #9eebcf,
 );
 
-$colors: map-merge($neutral-colors, $notification-colors);
+$brand-colors: (
+
+);
+
+$colors: map-collect(
+  $neutral-colors,
+  $notification-colors,
+  $brand-colors
+);
