--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -3,7 +3,13 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
-// # configuration
+// # tools
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
+@import "base/map-extension";
+@import "base/rule-set-builder";
+
+// # configurations
 ////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////
 @import "base/configuration";
@@ -13,21 +19,20 @@
 ////////////////////////////////////////////////////////////
 @import "base/reset";
 @import "base/skeleton";
-@import "base/rule-set";
 
-//////////////////////////////
 // # layout
-//////////////////////////////
-@import "base/wrap";
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
+@import "base/wrapper";
 @import "base/grid";
 @import "base/display";
 @import "base/spacing";
 @import "base/measure";
 @import "base/vertical-align";
 
-//////////////////////////////
 // # typography
-//////////////////////////////
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
 @import "base/type-scale";
 @import "base/font-family";
 @import "base/font-weight";
@@ -38,9 +43,9 @@
 @import "base/text-decoration";
 @import "base/text-align";
 
-//////////////////////////////
 // # theme-ing
-//////////////////////////////
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
 @import "base/color";
 @import "base/background-color";
 @import "base/border";
