--- a/assets/sass/base/_color.scss
+++ b/assets/sass/base/_color.scss
@@ -3,17 +3,7 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-@function generate-color-declarations($values) {
-  $result: ();
-  @each $value in $values {
-    $result: append($result, (
-      'color': $value
-    ), 'comma');
-  }
-  @return $result;
-}
-
 $color-selectors: map-keys($colors);
 $color-values: map-values($colors);
-$color-declarations: generate-color-declarations($color-values);
+$color-declarations: map-declarations('color', $color-values);
 @include responsive-rule-set($color-selectors, $color-declarations);
