--- a/assets/sass/base/_wrapper.scss
+++ b/assets/sass/base/_wrapper.scss
@@ -1,4 +1,4 @@
-// # wrap
+// # wrapper
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
